fixed spacing

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-/* section {
-  padding-top: 5vw;
-  padding-bottom: 5vw;
-} */
 
 /* the doom code */
 /* *{
